# Yantra

./: !run.bat  !runCalculator.bat  !runCalculatorGUI.bat  !runGUI.bat  !runGUIcounter.bat  !runGUIrust.bat  .dockerignore  .gitignore  .gitmodules  .mailmap  CLAUDE.md  CONTENT_AUDIT.md  Dockerfile  Meta's Vision Paper_ Neural Computers Prototype Critique - Grok.html  ONBOARDING.md  Profiting from the AI bubble burst - Claude.html  Programmers as RPG classes - Claude.html  Questionable empirical methods in AI research - Claude.html  README.md  Submit NeurIPS paper on Sutra - Grok.html  Sutra and transformer-based computation - Claude.html  Sutra-native operating system for AI - Claude.html  devlog.md  pyproject.toml  queue.md  requirements.txt  todo.md
.devcontainer/: devcontainer.json
Meta's Vision Paper_ Neural Computers Prototype Critique - Grok_files/: 0dedd17da2566678.js.download  18634a5498eeef52.js.download  1d15b4e0fd9b29ce.js.download  2ae167454353f3d3.js.download  2baf2c2fc33515f9.js.download  2cb002cf1865fcf0.js.download  3088f046002e5f1e.js.download  3189155b9e72f163.js.download  330fc287853d1aed.js.download  338045096b172712.js.download  3cac483388d7fe4e.js.download  3d4c5538ec7e0ed8.js.download  3dd5128c7da11f65.js.download  43a3148c8b382974.js.download  4f951807db2bd531.js.download  50cf95f874e11c88.js.download  536af71027c5e8e8.js.download  6525cdd02688b2d6.js.download  6e3b930db6a473d5.js.download  6e419b23640fd45c.js.download  71cb6297efb8d010.js.download  77caaef3307134be.js.download  86e0d0e0b58f6043.js.download  899676d4ab8b34f7.js.download  8c9020465dbd5eee.js.download  8ff03e3f219cd388.js.download  92ac8926bbdd08e4.js.download  a7ad33de23189ac4.js.download  a93e85248004b297.js.download  a9e58bda980dd64f.js.download  afe80d117197f4ae.js.download  b84dc407c413b9da.js.download  ba87748be67b5659.js.download  bc6f299926dfd54c.js.download  bf35f0f630e0d586.js.download  bfa61fd566360647.js.download  c08d82463a75f5c9.js.download  cb=gapi.loaded_0  ccef99ed763c56c0.js.download  cebbe9b18a270d4d.js.download  (+14 more)
Profiting from the AI bubble burst - Claude_files/: js(1)
Programmers as RPG classes - Claude_files/: isolated-segment.html  js
Questionable empirical methods in AI research - Claude_files/: isolated-segment.html  saved_resource(1).html  saved_resource.html
Submit NeurIPS paper on Sutra - Grok_files/: 0242215e29045c49.js.download  097306f572800f4d.js.download  263e9b977677eb6d.js.download  26fd0820500751a5.js.download  35e148a7885865d0.js.download  36536089a84d211c.js.download  3d2190d3d098589e.js.download  3f4632da90a97279.js.download  591dd20abf35b56d.js.download  673b306670931b4e.js.download  6b1beaeb32df859c.js.download  771a7f67ad32cde7.js.download  7b15a69e9556e4cc.js.download  862c453c24146758.js.download  8e6896c892ba2890.js.download  9318f4b2f1186ddc.js.download  9d00cc99f5ce1b7e.js.download  a95c84c0735e129a.js.download  acf8cf300a5c743e.js.download  b4fc4ab2c2573591.css  b70e462e8404d21c.js.download  b9c96db7d3b1cbc3.js.download  ba77faa6f6fd5aa1.js.download  c3e1b9e2fb52edf1.js.download  c4d3369d85267720.js.download  d3772ce44a360c4c.js.download  favicons  (+12 more)
apps/gui-rust/: Cargo.toml  README.md
apps/gui-rust/src/: main.rs
bootloader/: .gitignore  Cargo.toml  README.md  linker.ld  rust-toolchain.toml
bootloader/.cargo/: config.toml
bootloader/src/: main.rs  pci.rs
orchestrator/: Cargo.toml  README.md
orchestrator/src/: axon.rs  checkpoint.rs  json.rs  lib.rs
orchestrator/tests/fixtures/: echo_process.yprc  kernel_state.ykst
(+187 files in other folders)
